rename to Multigram for terms Telegram and remove Customize-Contacts screen option

--- a/apktool.yml
+++ b/apktool.yml
@@ -1,5 +1,5 @@
 !!brut.androlib.meta.MetaInfo
-apkFileName: Telegram++v4.2.1.1.apk
+apkFileName: Multigram.apk
 compressionType: false
 doNotCompress:
 - arsc
